Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- fix: impossible to create or upgrade a site using CPSBoxes
- fix : update Zope-2.7.x -> Zope-2.8.x
- fix : bug in getImgTag()
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-